sumo/tests/sumo/output/meandata_lanebased/errors/missing_end_divider/errors.sumo
Error: Empty 'end' in definition of meandata-lane 'dump_15'.
Quitting (on error).
